--- a/.fonts.yaml
+++ b/.fonts.yaml
@@ -28,8 +28,14 @@ font:
     id: font_date
     size: 35
 
+  - file: 'fonts/Itim-Regular.ttf'
+    id: font_date_big
+    size: 45
+    glyphs:
+      ['0','1', '2', '3', '4', '5', '6', '7', '8', '9']  
+
   - file: 'fonts/materialdesignicons-webfont.ttf'
-    id: icon_font
+    id: icon_font_old
     size: 65
     glyphs: [
       "\U000F156D", # living room
@@ -41,60 +47,95 @@ font:
       "\U000F0322", # lg studio
       "\U000F0AAB" # al studio
       ]
+  - file: 'fonts/Font Awesome 6 Pro-Light-300.otf'
+    id: icon_font
+    size: 63
+    glyphs: [
+      "\uf4b8", # living room
+      "\uf44b", # gym
+      "\ue51a", # kitchen
+      "\uf8f7", # mastbed
+      "\uf7d9", # attic
+      "\uf233", # server
+      "\ue4e5", # lg studio
+      "\uf109" # al studio
+      ]
 
   - file: 'fonts/materialdesignicons-webfont.ttf'
-    id: weather_font_85
+    id: weather_font_85_old
     size: 85
     glyphs: [
       # Weather
-      "\U000F0590", # mdi-weather-cloudy
-      "\U000F0594", # mdi-weather-night
-      "\U000F0591", # mdi-weather-fog
-      "\U000F0592", # mdi-weather-hail
-      "\U000F0593", # mdi-weather-lightning
-      "\U000F067E", # mdi-weather-lightning-rainy
-      "\U000F0595", # mdi-weather-partly-cloudy
-      "\U000F0596", # mdi-weather-pouring
-      "\U000F0597", # mdi-weather-rainy
-      "\U000F0598", # mdi-weather-snowy
-      "\U000F067F", # mdi-weather-snowy-rainy
-      "\U000F0599", # mdi-weather-sunny
-      "\U000F059B", # mdi-weather-sunset-down
-      "\U000F059C", # mdi-weather-sunset-up
-      "\U000F059D", # mdi-weather-windy
-      "\U000F059E", # mdi-weather-windy-variant
+      "\U000F0590", # cloudy
+      "\U000F0594", # clear-night
+      "\U000F0591", # fog
+      "\U000F0592", # hail
+      "\U000F0593", # lightning
+      "\U000F067E", # lightning-rainy
+      "\U000F0595", # partly-cloudy
+      "\U000F0596", # pouring
+      "\U000F0597", # rainy
+      "\U000F0598", # snowy
+      "\U000F067F", # snowy-rainy
+      "\U000F0599", # clear-day
+      "\U000F059B", # sunset-down
+      "\U000F059C", # sunset-up
+      "\U000F059D", # windy
+      "\U000F059E", # windy-variant
       ]
 
-  - file: 'fonts/materialdesignicons-webfont.ttf'
-    id: wind_font
-    size: 45
+  - file: 'fonts/Font Awesome 6 Pro-Solid-900.otf'
+    id: weather_font_big
+    size: 83
     glyphs: [
       # Weather
-      "\U000F059D", # mdi-weather-windy
-      "\U000F059E" # mdi-weather-windy-variant
+      "\uf744", # cloudy
+      "\uf762", # clear-night
+      "\uf74e", # fog
+      "\uf739", # hail
+      "\uf76c", # lightning
+      "\uf76e", # lightning-rainy
+      "\uf763", # partly-cloudy
+      "\uf740", # pouring
+      "\uf73f", # rainy
+      "\uf2dc", # snowy
+      "\uf73d", # snowy-rainy
+      "\uf185", # clear-day
+      "\uf767", # sunset-down
+      "\uf766", # sunset-up
+      "\uf777", # windy
+      "\uf6f4", # windy-variant
+      ]
+  - file: 'fonts/Font Awesome 6 Pro-Light-300.otf'
+    id: wind_font
+    size: 38
+    glyphs: [
+      # Weather
+      "\uf72e", # windy
+      "\uf777" # windy-variant
       ]
 
-  - file: 'fonts/materialdesignicons-webfont.ttf'
+  - file: 'fonts/Font Awesome 6 Pro-Light-300.otf'
     id: sun_font
     size: 40
     glyphs: [
       # Weather
-      "\U000F059C", # sun up
-      "\U000F059B" # sun down
+      "\uf766", # sun up
+      "\uf767" # sun down
       ]
 
-  - file: 'fonts/materialdesignicons-webfont.ttf'
+  - file: 'fonts/Font Awesome 6 Pro-Light-300.otf'
     id: icon_font_small
-    size: 25
+    size: 24
     glyphs: [
-      "\U000F050F", # temperature
-      "\U000F058E" # humidity
+      "\uf2ca", # temperature
+      "\uf750" # humidity
       ]
-  - file: 'fonts/materialdesignicons-webfont.ttf'
+  - file: 'fonts/Font Awesome 6 Pro-Solid-900.otf'
     id: icon_font_storm
     size: 30
     glyphs: [
-      "\U000F067E" # storm
+      "\uf76c" # storm
       ]
   - file: 'fonts/Itim-Regular.ttf'
     id: clockfont
@@ -108,3 +149,11 @@ font:
     size: 70
     glyphs:
       ['月','火','水','木','金','土','日']    
+
+  - file: 'fonts/moon_phases.ttf'
+    id: moon_font
+    size: 95
+  - file: 'fonts/moon_phases.ttf'
+    id: moon_font_big
+    size: 120
+
